Work on differential expression, changes to stylesheet

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,4 +1,13 @@
-%.pdf: %.rst
+RST=$(wildcard *.rst)
+PDF=$(patsubst %.rst,%.pdf,$(RST))
+
+all: $(PDF)
+
+clean:
+	rm -f *.pdf
+
+.PHONY: clean
+
+%.pdf: %.rst slides.style
 	rst2pdf $< -b1 -o $@ -s slides.style
 
-all: intro.pdf
