Adjusting ignored masks

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,10 @@ data/*
 !data/questionnaire.csv
 *.swp
 *.swo
-<<<<<<< HEAD
 *.pdf
-.Rproj.user
-=======
+*.html
+.DS*
+*.Rproj
 .Rproj.user
 *.Rout
 *.RData
->>>>>>> 86b51159ffa443c6469cd84d7e76075d195ee4a4
